log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-random
          emptyDir: {}
      containers:
        - name: log-output-server
          image: log_output_server:2.1
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: shared-random
              mountPath: /app/files
        - name: log-output-random
          image: log_output_random:2.1
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: shared-random
              mountPath: /app/files
